[gd_scene load_steps=17 format=2]

[ext_resource path="res://addons/gdyarn/yarn_gui.gd" type="Script" id=1]
[ext_resource path="res://exampleAssets/Cairo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://exampleAssets/arrowBeige_right.png" type="Texture" id=3]
[ext_resource path="res://exampleAssets/buttonLong_brown_pressed.png" type="Texture" id=4]
[ext_resource path="res://exampleAssets/buttonLong_brown.png" type="Texture" id=5]
[ext_resource path="res://exampleAssets/panel_brown.png" type="Texture" id=6]
[ext_resource path="res://exampleAssets/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://TextContainer.gd" type="Script" id=8]
[ext_resource path="res://yarn_button.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=6]
size = 24
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 8.532
margin_right = 9.1008
margin_top = 10.2384
margin_bottom = 13.0824
modulate_color = Color( 0.682353, 0.666667, 0.666667, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 190, 45 )
margin_left = 10.6147
margin_right = 9.28789
margin_top = 9.95131
margin_bottom = 9.95131

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 11.7042
margin_right = 10.7289
margin_top = 10.7289
margin_bottom = 15.1179

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, -0.916206, 102.463, 103.581 )
margin_left = 22.1533
margin_right = 25.376
margin_top = 17.9621
margin_bottom = 20.9937

[sub_resource type="DynamicFont" id=7]
size = 48
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="TestDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 49.0
margin_right = 1.0
margin_bottom = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
_text = NodePath("VBoxContainer/TextPanel/VBoxContainer/TextContainer/Text")
_namePlate = NodePath("VBoxContainer/TextPanel/VBoxContainer/Name")
_options = [ NodePath("VBoxContainer/HBoxContainer/VBoxContainer/option0"), NodePath("VBoxContainer/HBoxContainer/VBoxContainer/option1"), NodePath("VBoxContainer/HBoxContainer/VBoxContainer/option2"), NodePath("VBoxContainer/HBoxContainer/VBoxContainer/option3") ]
_textSpeed = 12

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = -40.0
margin_right = 1015.0
margin_bottom = 547.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1013.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 22.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.27

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 517.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
custom_constants/separation = 10
alignment = 2

[node name="option0" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 495.0
margin_bottom = 71.8468
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "option"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 495.0
margin_bottom = 152.847
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "option"
align = 0

[node name="option2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 495.0
margin_bottom = 233.847
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "option"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 495.0
margin_bottom = 314.847
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "option"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 517.0
margin_right = 1013.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="TextPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 1013.0
margin_bottom = 587.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextPanel"]
margin_left = 22.1533
margin_top = 17.9621
margin_right = 987.624
margin_bottom = 242.006
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="RichTextLabel" parent="VBoxContainer/TextPanel/VBoxContainer"]
visible = false
margin_right = 180.0
margin_bottom = 36.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 7 )
text = "Name"
scroll_active = false

[node name="TextContainer" type="HBoxContainer" parent="VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 965.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.98
script = ExtResource( 8 )

[node name="Control" type="Control" parent="VBoxContainer/TextPanel/VBoxContainer/TextContainer"]
margin_right = 32.0
margin_bottom = 224.0
rect_min_size = Vector2( 32, 0 )
mouse_filter = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 0.42

[node name="Text" type="RichTextLabel" parent="VBoxContainer/TextPanel/VBoxContainer/TextContainer"]
margin_left = 36.0
margin_right = 940.0
margin_bottom = 224.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.92
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextPanel/VBoxContainer/TextContainer"]
margin_left = 944.0
margin_right = 965.0
margin_bottom = 224.0
rect_min_size = Vector2( 21, 0 )
size_flags_stretch_ratio = 0.29
alignment = 2

[node name="Button" type="TextureButton" parent="VBoxContainer/TextPanel/VBoxContainer/TextContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 21.0
margin_bottom = 224.0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
script = ExtResource( 9 )
period = 0.8
amplitude = 5.0

[connection signal="line_finished" from="." to="VBoxContainer/TextPanel/VBoxContainer/TextContainer/VBoxContainer/Button" method="show_button"]
[connection signal="line_started" from="." to="VBoxContainer/TextPanel/VBoxContainer/TextContainer/VBoxContainer/Button" method="hide_button"]
[connection signal="options_shown" from="." to="VBoxContainer/TextPanel/VBoxContainer/TextContainer/VBoxContainer/Button" method="hide_button"]
[connection signal="clicked" from="VBoxContainer/TextPanel/VBoxContainer/TextContainer" to="." method="finish_line"]
[connection signal="pressed" from="VBoxContainer/TextPanel/VBoxContainer/TextContainer/VBoxContainer/Button" to="." method="finish_line"]
